--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ section{
 .input__wrapper{
 	margin-bottom: 10px;
 }
-.register-form{
+.login-form{
 	display: none;
 }
 .form__input{
@@ -61,9 +61,6 @@ section{
 	}
 }
 @media (max-width: 425px){
-	section{
-		padding-top: 0;
-	}
 	.form__wrapper{
 		width: 290px;
 	}
